--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@ author_profile: true
 header:
   image: "/images/about.jpg"
 ---
+
+<a rel="nofollow" target="_blank" href="https://www.vecteezy.com">Design Credits: vecteezy.com</a>
