--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ header:
   image: "/images/about.jpg"
 ---
 
-<a rel="nofollow" target="_blank" href="https://www.vecteezy.com">Design Credits: vecteezy.com</a>
+<a rel="nofollow" target="_blank" href="https://www.vecteezy.com">Design Credits for the Picture Above: vecteezy.com</a>
